# OpenPAD

./: .gitignore  ARCHITECTURE.md  README.md  build.gradle.kts  jitpack.yml  settings.gradle.kts
.github/workflows/: build.yml  unit-tests.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fil/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-he/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-id/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-ms/: strings.xml
app/src/main/res/values-nb/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sk/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-sw/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidApplicationConventionPlugin.kt  ComposeConventionPlugin.kt  HiltConventionPlugin.kt  KotlinAndroid.kt  MavenPublishConventionPlugin.kt
gradle/: libs.versions.toml
pad-core/: build.gradle.kts  consumer-rules.pro
pad-core/src/main/: AndroidManifest.xml
pad-core/src/main/assets/models/: depth_map.pad  device_detection.pad  face_detection.pad  face_enhance.pad  screen_reflection.pad  texture_2x7.pad  texture_4x0.pad
pad-core/src/main/cpp/: CMakeLists.txt  README.md
pad-core/src/main/cpp/include/openpad/: aggregation.h  challenge.h  config.h  frequency.h  image.h  openpad.h  photometric.h  pipeline.h  temporal.h  types.h
pad-core/src/main/cpp/src/core/: config.c  pipeline.c
pad-core/src/main/cpp/src/decision/: challenge.c  classifier.c  stabilizer.c
pad-core/src/main/cpp/src/frequency/: fft.c  fft.h  lbp.c  moire.c
pad-core/src/main/cpp/src/image/: sharpness.c  similarity.c
pad-core/src/main/cpp/src/jni/: openpad_jni.c
pad-core/src/main/cpp/src/photometric/: chrominance.c  edge_dof.c  lighting.c  photometric.c  photometric_internal.h  specular.c
pad-core/src/main/cpp/src/temporal/: ringbuf.c  ringbuf.h  tracker.c
pad-core/src/main/res/values-ar/: strings.xml
pad-core/src/main/res/values-bn/: strings.xml
pad-core/src/main/res/values-ca/: strings.xml
pad-core/src/main/res/values-cs/: strings.xml
pad-core/src/main/res/values-da/: strings.xml
pad-core/src/main/res/values-de/: strings.xml
pad-core/src/main/res/values-el/: strings.xml
pad-core/src/main/res/values-es/: strings.xml
pad-core/src/main/res/values-fi/: strings.xml
pad-core/src/main/res/values-fil/: strings.xml
pad-core/src/main/res/values-fr/: strings.xml
pad-core/src/main/res/values-he/: strings.xml
pad-core/src/main/res/values-hi/: strings.xml
pad-core/src/main/res/values-hr/: strings.xml
pad-core/src/main/res/values-hu/: strings.xml
pad-core/src/main/res/values-id/: strings.xml
pad-core/src/main/res/values-it/: strings.xml
pad-core/src/main/res/values-ja/: strings.xml
pad-core/src/main/res/values-ko/: strings.xml
pad-core/src/main/res/values-ms/: strings.xml
pad-core/src/main/res/values-nb/: strings.xml
pad-core/src/main/res/values-nl/: strings.xml
pad-core/src/main/res/values-pl/: strings.xml
pad-core/src/main/res/values-pt/: strings.xml
pad-core/src/main/res/values-pt-rBR/: strings.xml
pad-core/src/main/res/values-ro/: strings.xml
pad-core/src/main/res/values-ru/: strings.xml
pad-core/src/main/res/values-sk/: strings.xml
pad-core/src/main/res/values-sv/: strings.xml
pad-core/src/main/res/values-sw/: strings.xml
pad-core/src/main/res/values-th/: strings.xml
pad-core/src/main/res/values-tr/: strings.xml
pad-core/src/main/res/values-uk/: strings.xml
pad-core/src/main/res/values-vi/: strings.xml
pad-core/src/test/cpp/: CMakeLists.txt  test_aggregation.cpp  test_challenge.cpp  test_config.cpp  test_frequency.cpp  test_image.cpp  test_photometric.cpp  test_pipeline.cpp  test_ringbuf.cpp  test_temporal.cpp
scripts/: pack_models.py  run_cpp_tests.sh  train_screen_detector.py
scripts/model_backups/: 4_0_0_80x80_MiniFASNetV1SE.tflite.fp32.bak  cdcn_depth.tflite.fp32.bak
(+117 files in other folders)
